admin/css/activities-admin.css
/**
 * All of the CSS for your admin-specific functionality should be
 * included in this file.
 */

.acts-wrap {
  position: relative;
}

.acts-wrap a {
  text-decoration: none;
}

.acts-grey {
  color: grey;
  white-space: pre-line;
}

.activities-box-wrap {
  background-color: #fff;
  border: 1px solid lightgrey;
  border-radius: 3px;
}

.activities-box-padding {
  padding: 5px 15px 10px;
}

#activities-title a {
  margin-left: 10px;
  font-size: 14px;
}

#activities-filter-wrap {
  margin-top: 10px;
  margin-bottom: 10px;
}

#activities-filter-wrap b {
  display: block;
  margin-top: 10px;
  font-size: 16px;
}

#activities-filter-wrap div {
  display: inline-block;
}

#activities-filter-wrap input {
  height: 31px;
  margin-right: 10px;
}

.acts-filter-buttons {
  vertical-align: bottom;
  margin-top: 10px;
}

#activities-bulk-wrap {
  padding-bottom: 7px;
  display: inline-block;
}

#activities-items-num {
  margin-left: 10px;
  width: 50px;
}

.activities-name-wrap {
  display: inline-block;
  width: calc(100% - 30px);
}

.activities-nice-link {
  float: right;
  vertical-align: top;
}

.activities-activate {
  color: #009933;
}

.activities-activate:hover {
  color: #00b33c;
}

.activities-delete {
  color: #cc0000;
  cursor: pointer;
}

.acts-req-mark,
.activities-delete:hover {
  color: red;
}

#activities-options {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: baseline;
}

#activities-options div {
  margin-right: 10px;
}

.activities-table tr :not(:last-child) {
  padding-right: 5px;
}

.activities-table .activities-table-d {
  text-align: center;
}

.activities-table thead {
  font-weight: bold;
}

.acts-form input[type=text],
.acts-form input[type=date],
.acts-form input[type=number],
.acts-form input[type=checkbox],
.acts-form textarea {
  border-radius: 3px;
}

.acts-create-wrap {
  width: 70%;
  min-width: 300px;
  display: inline-block;
}

.acts-create-wrap ul {
  margin: 0;
}

.acts-create-wrap input[type=text],
.acts-create-wrap textarea {
  width: 100%;
}

#acts-location-desc {
  height: 265px;
}

#acts-activity-ldesc {
  height: 200px;
}

.acts-form-columns {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.acts-single-column {
  width: 49%;
  min-width: 300px;
}

#acts-import-table {
  border-spacing: 0;
}

#acts-import-table > tbody > :nth-child(2n+1) {
  background-color: #f9f9f9;
}

#acts-import-table td {
  padding: 8px 10px;
  height: 4em;
  vertical-align: top;
}

#acts-import-table tbody tr > :first-child  {
  max-width: 250px;
}

#acts-import-table tbody tr > :nth-child(2) {
  max-width: 500px;
}

.acts-wrap .acts-progress-row:nth-child(2n+1) {
  background-color: #f9f9f9;
}

.acts-progress-row {
  overflow: hidden;
  background-color: white;
  margin: 0;
  padding: 5px 0px;
}

.acts-progress-row li {
  float: left;
  margin-right: 10px;
}

.acts-progress-row li:first-child {
  width: 100px;
  padding-left: 20px;
}

.acts-export-label {
  display: block;
  padding-bottom: 5px;
}

.acts-export-select {
  width: 50%;
}

#acts-export-copied {
  color: green;
  visibility: hidden;
}

#acts-export-results {
  padding: 7px;
  white-space: pre-line;
}

#acts-nice-settings-wrap {
  display: inline-block;
  height: 100%;
  position: relative;
  height: 0;
}

#acts-show-nice-settings {
  display: none;
  background-color: white;
  position: absolute;
  right: 19px;
  z-index: 2;
}

#acts-show-nice-settings,
#acts-show-nice-settings > .dashicons  {
  width: 50px;
  height: 50px;
  font-size: 50px;
}

#acts-nice-settings {
  width: 300px;
}

#acts-nice-settings input[name=header],
#acts-nice-settings #time-slots  {
  width: 100%;
}

#acts-nice-settings h3 #acts-reload-members {
  vertical-align: baseline;
  font-weight: normal;
}

#acts-nice-logo-setting .button,
#acts-nice-logo-setting b {
  margin-bottom: 5px;
}

#acts-nice-logo-setting b {
  display: block;
}

#acts-nice-members-setting h3 {
  margin: 10px 0px 15px;
}

.acts-nice-loader-wrap {
  float: right;
  margin: 0 !important;
  vertical-align: middle;
}

.acts-nice-loader {
  border: 2px solid #f3f3f3;
  border-radius: 50%;
  border-top: 2px solid #3498db;
  width: 16px;
  height: 16px;
  animation: acts-loader-spin 2s linear infinite;
  z-index: 2;
  display: inline-block;
  vertical-align: middle;
}

@keyframes acts-loader-spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

#acts-time-mark {
  width: 80px;
}

#acts-nice-custom li input[type=text] {
  width: 50%;
}

#acts-nice-custom li #add-custom,
#acts-nice-custom li .delete-custom,
#acts-nice-color li #add-color,
#acts-nice-color li .delete-color {
  font-size: 20px;
}

#acts-nice-custom li input[type=text],
#acts-nice-custom li input[type=submit],
#acts-nice-color li input[type=text],
#acts-nice-color li input[type=submit] {
  vertical-align: middle;
}

#acts-nice-color li input[type=text] {
  width: 85%;
}

#acts-nice-color li:not(:first-child):not(:nth-child(2)):not(:last-child) {
  padding-bottom: 5px;
  border-bottom: 1px dashed grey;
}

#acts-nice-buttons {
  padding-top: 5px;
}

#acts-nice-buttons .acts-nice-top-buttons {
  display: flex;
  flex-grow: 0;
  flex-shrink: 0;
  justify-content: space-between;
}

#acts-nice-buttons .acts-nice-splitter {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border-style: dashed;
}

#acts-nice-preview {
  border: 1px solid lightgrey;
  background-color: #fff;
  width: 210mm;
  display: inline-block;
  vertical-align: top;
}

#acts-nice-preview h1 {
  font-size: 20px;
}

#acts-nice-wrap {
  padding: 3mm 7mm 10mm 7mm;
  position: relative;
}

#acts-nice-info {
  min-height: 200px;
}

#acts-nice-info p {
  white-space: pre-line;
  margin: 7px 0;
}

#acts-nice-header {
  height: 7mm;
  width: 100%;
  line-height: 7mm;
  text-align: right;
  white-space: nowrap;
}

#acts-nice-logo {
  max-width: 54%;
  max-height: 200px;
  float: right;
}

.acts-nice-phone-hr {
  display: none;
}

.acts-nice-members-row {
  display: flex;
  flex-direction: row;
}

.acts-nice-members-info,
.acts-nice-members-head {
  width: 36%;
}

.acts-user-quick-edit {
  color: #0073aa;
}
.acts-user-quick-edit .dashicons {
  visibility: hidden;
  width: 16px;
  height: 16px;
  font-size: 16px;
}

.acts-user-quick-edit:hover {
  color: #0085ba;
}

.acts-user-quick-edit:hover .dashicons {
  visibility: visible;
}

.acts-nice-members-time,
.acts-nice-members-head-time {
  width: 29%;
}

.acts-nice-members-head,
.acts-nice-members-head-time {
  border-bottom: 2px solid black;
  vertical-align: bottom;
  padding: 5px;
}

.acts-nice-members-info,
.acts-nice-members-time {
  border-bottom: 1px solid black;
  border-right: 1px solid black;
  padding: 3px 5px;
}

.acts-quick-edit-type ul,
.acts-quick-edit-type ul li,
.acts-nice-members-info span ul,
.acts-nice-members-info span ul li {
  margin: 0;
}

.acts-nice-members-info span ul li:not(.acts-nice-member-name) {
  font-size: 10px;
}

.acts-nice-compressed-info {
  width: 75%;
  display: inline-block;
}

.acts-nice-coupons {
  display: inline-block;
  float: right;
  vertical-align: top;
  width: 25%;
  text-align: right;
}

.acts-quick-edit-box {
  margin-top: 7px;
}

.acts-quick-edit-box > div {
  padding: 0 0 7px 0;
}

.acts-quick-edit-box label {
  display: block;
  margin-top: 6px;
  margin-bottom: 2px;
}

.acts-quick-edit-header {
  display: block;
  font-size: 18px;
  margin: 5px 0;
}

.acts-quick-edit-type[type=user] .acts-quick-edit-header {
  font-size: 18px;
  margin: 0 0 10px 0;
}

.acts-quick-edit-group .acts-quick-edit-header {
  font-size: 16px;
}

.acts-quick-edit-type {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.acts-quick-edit-group {
  min-width: 300px;
  width: 49%;
  padding: 5px 0px;
}

.acts-quick-edit-group input,
.acts-quick-edit-group textarea {
  width: 100%;
}

.acts-quick-edit-group textarea {
  height: 100px;
}

.acts-quick-img-wrap {
  display: block;
  width: 128px;
  height: 128px;
  margin: auto;
  border: 1px solid darkgrey;
  border-radius: 3px;
  position: relative;
}

.acts-quick-img-wrap .acts-nice-loader {
  position: absolute;
  top: 54px;
  left: 54px;
}

/* Small devices (portrait tablets and large phones, 600px and down) */
@media only screen and (max-width: 600px) {
  #acts-nice-header {
    text-align: center;
  }

  #acts-nice-logo {
    display: block;
    max-width: 100%;
    float: none;
    margin: auto;
  }

  #acts-nice-info > h1 {
    padding: 0 0 5px 0;
  }

  #acts-nice-info > b {
    display: block;
    text-align: center;
  }

  .acts-nice-phone-hr {
    display: block;
  }

  .acts-nice-sub-del {
    display: none !important;
  }

  .acts-nice-sub-info {
    display: block;
  }

  .acts-nice-members-info {
    border-bottom: none;
  }

  .acts-nice-members-info,
  .acts-nice-members-time {
    width: 100% !important;
  }
}

/* Medium devices (landscape tablets, 768px and down) */
@media only screen and (max-width: 768px) {
  .acts-nice-members-row {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .acts-nice-members-head-time,
  .acts-nice-members-head {
    display: none;
  }

  .acts-nice-members-head:first-child {
    display: block;
    width: 100%;
  }

  .acts-nice-members-info {
    width: 40%;
    flex-grow: 1;
  }

  .acts-nice-members-time {
    width: 100%;
  }
}

/* Around this width the report needs to be resized to fit */
@media only screen and (max-width: 872px) {
  #acts-nice-preview {
    width: 100%;
  }

  /*Since its no longer the a4 print size we remove the print buttons*/
  .acts-nice-print {
    display: none !important;
  }
}

/* Large devices (laptops/desktops, 992px and down) */
@media only screen and (max-width: 992px) {

}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (max-width: 1200px) {

}

@media only screen and (max-width: 1230px) {
  body {
    overflow-x: hidden;
  }
  #acts-nice-settings-wrap {
    position: absolute;
    right: -20px;
    top: 40px;
  }

  #acts-show-nice-settings {
    display: block;
  }

  #acts-nice-settings {
    z-index: 1;
    transform-origin: 0% 0%;
    transform: translate(100%, 0);

    transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0);
  }
}

@media print {
  @page :first {
    margin: 0 0 10mm 0;
  }

  @page {
    margin: 10mm 0 10mm 0;
  }

  html.wp-toolbar {
    padding-top: 0;
    background-color: #fff;
  }

  .notice,
  .button,
  .button-primary,
  #wpfooter,
  #adminmenumain,
  #wpadminbar,
  #activities-title,
  #acts-nice-settings,
  #acts-nice-preview-title,
  .acts-nice-print-hide {
    display: none !important;
  }

  .wrap,
  #wpcontent,
  #screen-meta,
  #wpbody-content {
    margin: 0;
    padding: 0;
    background-color: #fff;
  }

  #acts-nice-preview {
    display: block;
    width: 100%;
    border: none;
  }

  #acts-nice-wrap {
    margin: 0;
  }

  #acts-nice-preview,
  #acts-nice-wrap {
    page-break-inside: auto;
  }

  .acts-nice-members-info a {
    color: black;
  }

  .acts-nice-members-row,
  .acts-nice-members-head,
  .acts-nice-members-info,
  .acts-nice-members-time {
    page-break-before: auto;
    page-break-inside: avoid;
    page-break-after: auto;
  }
}

